Implement filtering, paginationCapping and sortingThreshold behaviour for pscNotifications endpoint